<resources>
    <string name="app_name">Loterias-DMS</string>
    <string name="mega_sena">MEGA-SENA</string>
    <string name="quina">QUINA</string>
    <string name="lotofacil">LOTOFÁCIL</string>
    <string name="menu_dezenas_mais_sorteadas">As Mais Sorteadas</string>
    <string name="menu_sorteios">Sorteios</string>
    <string name="menu_processar_arquivo">Processar Arquivo</string>
    <string name="menu_confira_seu_jogo">Confira Seu Jogo</string>
    <string name="subtitle_dezenas_mais_sorteadas">Dezenas Mais Sorteadas</string>
    <string name="title_sorteios">Sorteios</string>
    <string name="title_concuros">Conscuros</string>
    <string name="title_processar_arquivo">Processar Arquivo</string>
    <string name="label_gerar_jogos">Gerar Jogos</string>
    <string name="label_qtde_dezenas">Qtde.Dezenas</string>
    <string name="error_processar_arquivo">Erro ao processar arquivo</string>
    <string name="error_arquivo_invalido">Arquivo inválido</string>
    <string name="error_informe_arquivo">Informe o arquivo HTML com todos os resultados!</string>
    <string name="error_conexao">Verifique sua conexão!</string>
    <string name="msg_aguarde">Aguarde ...</string>
    <string name="title_submenu">Menu</string>
    <string name="action_exit">SAIR</string>
    <string name="nao_ha_dados">NÃO HÁ DADOS</string>
    <string name="nao_ha_sorteio">NÃO HÁ SORTEIOS A ATUALIZAR</string>
    <string name="nao_ha_jogos">JOGOS</string>
    <string name="title_activity_menu_secundario">Menu</string>
    <string name="label_instrucoes">Instruções</string>
    <string name="label_configuracoes">Configurações</string>
    <string name="msg_sair_app">Sair da Aplicação?</string>
    <string name="label_qtde_dezenas_por_jogo">Qtde. de Dezenas por Jogo</string>
    <string name="label_qtde_dezenas_selecionadas">0 dezenas selecionadas</string>
    <string name="label_dezenas_selecionadas">Dezenas selecionadas</string>
    <string name="label_numero_concurso">Concurso:</string>
    <string name="label_numero">Número</string>
    <string name="label_data">Data:</string>
    <string name="label_data_zero">00/00/0000</string>
    <string name="label_local">Local:</string>
    <string name="label_cidade_ganhador">Cidade do Ganhador</string>
    <string name="label_00">00</string>
    <string name="msg_delete_registro">Excluir o registro?</string>
    <string name="salvar">Salvar</string>
    <string name="cancelar">Cancelar</string>
    <string name="excluir">Excluir</string>
    <string name="alterar">Alterar</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="pesquisar_data_numero">Data ou Número</string>
    <string name="search_hint">Pesquisar</string>
    <string name="desfazer">Desfazer</string>
    <string name="compartilhar">Compartilhar</string>
    <string name="restaurar">Restaurar Padrão</string>
    <string name="recarregar">Recarregar</string>
    <string name="atualizar_sorteios">Atualizar Sorteios</string>
    <string name="listar_crescente">Por Ordem Crescente</string>
    <string name="listar_decrescente">Por Ordem Decrescente</string>
    <string name="ordenar_dezenas">Ordenar Dezenas</string>
    <string name="adicionar_sorteio">Adicionar Sorteio</string>
    <string name="delete_all">Excluir Tudo</string>
    <string name="msg_delete_todos">Todos Sorteios</string>
    <string name="codigo_barras">Codigo de Barras</string>
    <string name="tirar_foto">Foto da Aposta</string>
    <string name="filtrar_concursos">Filtrar Concursos</string>
    <string name="remover_filtro">Remover Filtro</string>
    <string name="title_file_dialog">Arquivo/Diretorio</string>
    <string name="location">Localização</string>
    <string name="file_name">Nome do Arquivo</string>
    <string name="no_data">Não há dados</string>
    <string name="fd_cant_read_folder">Não pode ler</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="valores_aposta">Valores de Aposta</string>
    <string name="arquivoResultadoUrl">URLs</string>
    <string name="web_service">Web Service</string>
    <string name="folder">pasta_arquivo</string>
    <string name="title_save_file">Salvar Arquivo</string>
    <string name="title_open_file">Abrir Arquivo</string>
    <string name="title_select_directory">Selecionar Pasta</string>
    <string name="msg_erro_name_file">Informe o nome do arquivo</string>
    <string name="title_activity_dezenas_mais_sorteadas">As Mais Sorteadas</string>
    <string name="title_activity_sorteio_list">Sorteios</string>
    <string name="title_activity_processar_arquivo">Processar Arquivo</string>
    <string name="title_activity_confira_seu_jogo">Confira Seu Jogo</string>
    <string name="zero">0 dezenas</string>
    <string name="msg_validade_form">Informe os campos abaixo</string>
    <string name="title_activity_gera_jogos">Jogos Gerados</string>
    <string name="title_activity_sorteio_edit">Editar Sorteio</string>
    <string name="label_processar_arquivo">Processar Arquivo</string>
    <string name="label_baixar_arquivo">Baixar Arquivo</string>
    <string name="title_activity_configuracoes">Configurações</string>
    <string name="label_url_arquivo_resultados">URL do Arquivo de Resultados</string>
    <string name="label_url_resultados">URL dos Resultados</string>
    <string name="title_activity_ocrresult_form">Resultado do OCR</string>
    <string name="msg_salvar_configuracoes">Deseja salvar as configurações?</string>
    <string name="msg_restaurar_config">Restaurar configurações padrão?</string>
    <string name="label_web_service">Web Service</string>
    <string name="label_url_web_service">URL raiz do Web Service</string>
    <string name="label_informe_arquivo">Informe o arquivo HTML</string>
    <string name="label_informe_jogo">Informe seu jogo</string>
    <string name="label_concurso">Concurso</string>
    <string name="label_dezenas">Dezenas</string>
    <string name="label_confirir">Conferir</string>
    <string name="title_activity_resultado_seu_jogo">Resultado do Seu Jogo</string>
    <string name="label_seu_jogo">Seu Jogo</string>
    <string name="label_ver_mais">Ver Mais</string>
    <string name="label_qtde_acertos">Qtde.Acertos</string>
    <string name="label_acertos">Acertos</string>
    <string name="label_digitalizar_seu_jogo">Digitalizar seu jogo</string>
    <string name="label_dezenas_sorteadas">Dezenas Sorteadas</string>
    <string name="hint_search_sorteio">Concurso ou Data</string>
    <string name="label_ver_outros_sorteios">Em Outros Sorteios</string>
    <string name="label_suas_dezenas">Suas Dezenas</string>
    <string name="label_0vezes">0 vezes</string>
    <string name="label_filtro_concursos">Concursos:</string>
    <string name="label_filtro_periodo">Período:</string>
    <string name="label_filtro_todos">Todos</string>
    <string name="title_activity_dezenas_mais_sorteadas_filtro">Filtro</string>
    <string name="subtitle_activity_dezenas_mais_sorteadas_filtro">As Mais Sorteadas</string>
    <string name="label_a">a</string>
    <string name="label_0_ultimos_concursos">0 últimos sorteios</string>
    <string name="ultimos_concursos">%d últimos sorteios</string>
    <string name="qtde_dezenas">%d dezenas</string>
    <string name="todos">Todos</string>
    <string name="dezenas_selecionadas">%d dezenas selecionadas</string>
    <string name="quantidade_concursos">Quantidade de Concursos</string>
    <string name="quantidade_dezenas">Quantidade de Dezenas</string>
    <string name="calculando">Calculando. Aguarde...</string>
    <string name="selecione_minimo">Selecione no mínimo %d dezenas</string>
    <string name="selecione_maximo">Selecione no máximo %d dezenas</string>
    <string name="processando">Processando. Aguarde...</string>
    <string name="listando">Listando. Aguarde...</string>
    <string name="erro_baixar_arquivo">Erro ao baixar o arquivo:</string>
    <string name="erro_processar_arquivo">Erro ao processar o arquivo:</string>
    <string name="descomprimindo">Descomprimindo arquivo. Aguarde...</string>
    <string name="baixando">Baixando arquivo. Aguarde...</string>
    <string name="erro_descomprimir">Erro ao descomprimir o aquivo:</string>
    <string name="processo_cancelado">Processo cancelado</string>
    <string name="processo_concluido">Processo concluido com sucesso</string>
    <string name="baixar_arquivo">Baixar Arquivo</string>
    <string name="processar_arquivo">Processar Arquivo</string>
    <string name="processando_imagem">Processando Imagem. Aguarde...</string>
    <string name="deseja_cancelar_processo">Deseja cancelar processo?</string>
    <string name="processando_arquivo_concurso">"Processando Arquivo\nConcurso: %d \nAguarde..."</string>
    <string name="calculando_jogo">"Calculando Jogo: %1$d de %2$d \nAguarde..."</string>
    <string name="error_arquivo_outro_jogo">Arquivo de outro Jogo: </string>
    <string name="error">Erro</string>
    <string name="atualizando_sorteio">Atualizando Sorteio\nAguarde...</string>
    <string name="concurso_nao_encontrado">Concurso %d não encontrado</string>
    <string name="atualizando_sorteio_concurso">Atualizando Sorteio \n%1$s \nConcurso: %2$d \nAguarde...</string>
    <string name="atualizacao_cancelado">Atualização cancelada</string>
    <string name="atualizacao_sorteios">Atualização de Sorteio</string>
    <string name="atualizacao_concluido">Atualização concluída com sucesso</string>
    <string name="erro_web_service">Erro ao obter sorteios. Verifique sua conexão! \nErro: </string>
    <string name="erro_gerar_sorteio">Erro ao gerar o sorteio: </string>
    <string name="label_dezenas_por_jogo">%d Dezenas por Jogo</string>
    <string name="label_ordem">%dº</string>
    <string name="label_total_jogos">Total de Jogos: %d jogo(s)</string>
    <string name="label_ordens">0000º</string>
    <string name="erro_numero_invalido">Erro: Número inválido</string>
    <string name="erro_data_invalida">Erro: Data inválida</string>
    <string name="title_activity_valores_aposta">Valores de Aposta</string>
    <string name="title_activity_urls">Arquivos de Todos Resultados</string>
    <string name="label_jogo">Jogo</string>
    <string name="title_activity_urls_edit">Editar URL</string>
    <string name="title_activity_web_service_edit">Editar URL</string>
    <string name="title_activity_web_service">Web Service</string>
    <string name="sublabel">Sublabel</string>
    <string name="title_activity_notificacao_edit">Notificações</string>
    <string name="label_notificacao_edit">Notificações de Sorteios</string>
    <string name="notificacao_switch_on">Sim</string>
    <string name="notificacao_switch_off">Não</string>
    <string name="label_editar">EDITAR</string>
    <string name="title_activity_atualiza_sorteio">Atualizar Sorteios</string>
    <string name="label_valor_aposta">Valor da aposta</string>
    <string name="label_valor_aposta_dezenas">Valor da aposta para %1$d dezenas: R$ %2$d</string>
    <string name="title_activity_valor_aposta_edit">Editar Valor</string>

</resources>
