<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="0,1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/label_web_service"
                android:id="@+id/textViewHeaderJogo"
                android:textStyle="bold|italic"
                android:textSize="26sp"
                android:layout_column="0"
                android:layout_span="2"
                android:textColor="@color/colorPrimary" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageButtonEdit"
                android:src="@drawable/ic_edit_gray_24dp"
                android:background="@drawable/selector_button_context"
                android:contentDescription="@string/alterar"
                android:padding="8dp"
                android:focusable="false"
                android:clickable="true" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/label_url_web_service"
                android:id="@+id/textViewUrlWebService"
                android:maxLines="1"
                android:layout_column="0"
                android:layout_span="2"
                android:singleLine="true"
                android:ellipsize="end"
                android:textColor="@color/colorBlack" />

        </TableRow>

    </TableLayout>

</LinearLayout>